# potato-gfx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
depends/: .gitmodules
depends/glad/: CMakeLists.txt
shaders/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  main.cpp  shader.cpp  shader.h
